<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_task_24"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_organize"
            android:icon="@drawable/ic_category_24"
            android:title="@string/menu_organize" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_notification_24"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>
