<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:gravity="center"
        android:background="@drawable/bg_table_header_cell"
        android:padding="4dp">
        <CheckBox
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:button="@null"
            android:background="@drawable/selector_checkbox_header"
            android:checked="true"
            android:clickable="false" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:text="@string/table_col_task_name"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"
        android:background="@drawable/bg_table_header_cell"
        android:padding="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/table_col_deadline"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"
        android:background="@drawable/bg_table_header_cell"
        android:padding="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/table_col_note"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"
        android:background="@drawable/bg_table_header_cell"
        android:padding="8dp"/>
</LinearLayout>